# ChangeLog for net-im/calculate-ejabberd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-ejabberd-2.0.5-r2 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-ejabberd-2.0.5-r2.ebuild,
  +files/ejabberd-2.0.5-erlang-13.patch:
  Added support erlang 13 (get from ejabberd-2.0.5-r3)
