@@ -7,6 +7,7 @@ AUX ejabberd-2.0.2.confd 840 RMD160 5227a3fbb0d0c8bffd8a5537003f965f1fb73582 SHA
 AUX ejabberd-2.0.2.initd 1134 RMD160 b5d3a5a50069be713511ebd37f9eab07dab33371 SHA1 0cd2c3bd44c1923014c1cdd84edfb56ddb11bdc2 SHA256 8b2c50bc80b5b0700195c79a4eaa6f68549fd63310b584c2e86d951c116e14de
 AUX ejabberd-2.0.5-erlang-13.patch 16877 RMD160 4b8924f5b37de85823dec539523e7800c394bc7c SHA1 663ffc03f29613d695589c199222bc0382a24c76 SHA256 3d5cb7c163647580e1776a4e31ca3f8e03b1b411288b8273c861d17db5fa1e4a
 AUX ejabberd-2.0.5-r1.initd 1438 RMD160 cef00b2ed6a0bf8eb791485853824fd42f2441e4 SHA1 da3fcc19ef60ecfaf27d948e27b5756f5bb1f83e SHA256 24a18be96ed3c22b1ac0ac3f9f89995a5aea0efcd4e825b9d668d98d1a96951b
+AUX ejabberd-2.0.5-r3.initd 1622 RMD160 a9253f3c9621a3751d1ec7ce2069e4fbf9ebef3e SHA1 7cc0f60b530bdceff4bef6163a5d46e116567f81 SHA256 e0b93d0e236c7f3130db6a689f05129af0e5f417d4d7f6a6a9efa73f34f7183a
 AUX ejabberd-2.0.5.confd 841 RMD160 5e01a2b13e88f9f799386304f66d25ff1146a9cf SHA1 420fba1888c8a5fcaef47f59b9518a4a9ce36b6f SHA256 12719cadf9d20b8d36bc299c41f6e1a15ccd545048859e9e878706308d691dde
 AUX ejabberd-2.0.5.initd 1432 RMD160 531cc4634e9e953fa901a59b301ee9f09beab29e SHA1 89f9535545d25eb89572a6d630f01c58366b499a SHA256 b6c312b148b5b833ebd69f1429f302bb51f0852074530600aadbbe49733115f1
 AUX ejabberd-wrapper-2.0.2.template 1273 RMD160 7ec1a86be5df671cb2ce54705de482ca1a172974 SHA1 ec412773c7913d8cfa59e6dcd330242268e60959 SHA256 96dcdca694fbe26b1098007d9e33361812a0ed532894e417155c0ac973bcdf6f
@@ -25,5 +26,6 @@ EBUILD calculate-ejabberd-2.0.2-r3.ebuild 5073 RMD160 b37dd12707fc6ce6a0b16c2354
 EBUILD calculate-ejabberd-2.0.2.ebuild 4955 RMD160 392007636ef070def316e5d62c5d02c05ef21b51 SHA1 6382ac2f5b11cf10ac1e5a18928726ca140aa2c8 SHA256 6f6e10f69f66bf2859fc54f794f015809af35079245bbde1000b944ccd369e2c
 EBUILD calculate-ejabberd-2.0.5-r1.ebuild 4408 RMD160 027a310d6764d532311a11196e2ae24e39fca89d SHA1 cd015c9681cc40d8aa6d7a64fad55d28aff3cdec SHA256 e88f72100bb53dd596f7812e3f93e8e66d637580b8c461ca7e6b294a3eb55ae7
 EBUILD calculate-ejabberd-2.0.5-r2.ebuild 4531 RMD160 e74c8cbe4c281c6e8cf6c97af369b23a3d8f2dee SHA1 a10f29e6247970885fb769448912d3837e58a8d6 SHA256 8a47d5cdc7f7af186efbcf29e269a11b9522d0956734ee73962aeb155b0950d5
+EBUILD calculate-ejabberd-2.0.5-r3.ebuild 4531 RMD160 f1cc290794eadbdbc21f83e480884d6e8910f98d SHA1 0dabba97bbcb7fcdca18856f3ca4ae5a172f403c SHA256 32580f3416e1e5ddfc75bd4367fed3d6c2630a16020e0ba68905a9be89c296b2
 EBUILD calculate-ejabberd-2.0.5.ebuild 4407 RMD160 6a86556378ed61909e8ba6d04bbc4a8213265eb1 SHA1 db31820f036967ba0c4a020ae61ed5398d8eab5b SHA256 24b5519bf7d7ea896a5d498497a254695676c6b7b6aa0c2d15169f3e6c45aa94
-MISC ChangeLog 365 RMD160 3cb17835e7346bb43f65250d39d3172a1cacc257 SHA1 0b1cdfc1061dd1d728335882bad84d884bc5bba7 SHA256 17d7d71575171a95625fe589a4f9614046415e33eccb9c21032d000c809685e3
+MISC ChangeLog 593 RMD160 26376b6cb9fcb875c44160be8bb2ec994c00c79f SHA1 8517cfc569635ff09cf5cb36487826b67c36cb53 SHA256 063242bcb4b7ded9ffe7be363d52433b4b93a66c60a3bd7676ce0bb06c0c9858
