@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-ejabberd-2.0.5-r3 (03 Dec 2009)
+
+  03 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  +calculate-ejabberd-2.0.5-r3.ebuild, +files/ejabberd-2.0.5-r3.initd:
+  Modify initd script for right detecting by openrc.
+
 *calculate-ejabberd-2.0.5-r2 (01 Dec 2009)
 
   01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
